# MGraph-AI__Service__mitmproxy

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml  requirements-test.txt  run-locally.sh
.github/actions/aws__deploy__lambda/: action.yml
.github/actions/git__update-build-info/: action.yml
.github/workflows/: ci-pipeline.yml  ci-pipeline__dev.yml  ci-pipeline__main.yml  ci-pipeline__prod.yml
.template/: VERSION
_ec2_files/: add_header.py  development_interceptor.py  fastapi_interceptor.py  mitmproxy.service
_experiments/localstack_ec2/: LocalStack__EC2__SSH__Mitmproxy.py  test_LocalStack__EC2__SSH__Mitmproxy.py
docs/: CHANGELOG.md  README.md  architecture.md  index.md
docs/dev/non-functional-requirements/: python-code-formatting-guidelines.md  (+2 more)
mgraph_ai_service_base/: __init__.py  config.py
mgraph_ai_service_base/build_info/: commit_hash
mgraph_ai_service_base/fast_api/: Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_base/utils/: Version.py
mgraph_ai_service_mitmproxy/: __init__.py  config.py
mgraph_ai_service_mitmproxy/fast_api/: Service__Fast_API.py  lambda_handler.py
mgraph_ai_service_mitmproxy/utils/: Version.py
scripts/: release-script-v1.0.0.sh  rename-service.sh  run-locally.sh  setup-from-template.sh  setup-new-service-from-bare-github-repo.sh  update-version.sh
tests/deploy_aws/: .env.example  test_Deploy__Service__base.py  test_Deploy__Service__to__dev.py  test_Deploy__Service__to__prod.py  test_Deploy__Service__to__qa.py
tests/unit/: Service__Fast_API__Test_Objs.py  test_config.py
(+48 files in other folders)
